--- a/AMG/CMakeLists.txt
+++ b/AMG/CMakeLists.txt
@@ -14,17 +14,18 @@ set(SOURCES
     src/amg.cpp
     src/main.cpp  
     src/statistics.cpp
+    src/gmres.cpp
 )
 
 #Lattice dimensions
-set(NS "20") 
-set(NT "20") 
+set(NS "16") 
+set(NT "16") 
 #Number of lattice blocks (used for aggregation)
 #N_i / BLOCK_i has to be an integer number
 set(BLOCK_X "4")
 set(BLOCK_T "4")
 #Number of test vectors
-set(NTEST "15") 
+set(NTEST "10") 
 set(NAGG "32") #BlockX * BlockT for aggregation scheme 1 and 2 * BlockX * BlockT for scheme 2
 configure_file(${CMAKE_SOURCE_DIR}/include/config.h.in ${CMAKE_SOURCE_DIR}/include/config.h)
 
@@ -38,6 +39,7 @@ add_executable("SM_${NS}x${NT}" ${SOURCES} "include/matrix_operations.h"
  "include/amg.h"
  "include/operator_overloads.h" 
  "include/statistics.h"
+ "include/gmres.h"
 )
 
 # Set the directories that should be included in the build command for this target
