--- a/AMG/CMakeLists.txt
+++ b/AMG/CMakeLists.txt
@@ -18,14 +18,14 @@ set(SOURCES
 )
 
 #Lattice dimensions
-set(NS "32") 
-set(NT "32") 
+set(NS "64") 
+set(NT "64") 
 #Number of lattice blocks (used for aggregation)
 #N_i / BLOCK_i has to be an integer number
 set(BLOCK_X "4")
 set(BLOCK_T "4")
 #Number of test vectors
-set(NTEST "10") 
+set(NTEST "20") 
 set(NAGG "32") #BlockX * BlockT for aggregation scheme 1 and 2 * BlockX * BlockT for scheme 2
 configure_file(${CMAKE_SOURCE_DIR}/include/config.h.in ${CMAKE_SOURCE_DIR}/include/config.h)
 
@@ -51,11 +51,11 @@ target_include_directories("SM_${NS}x${NT}"
 target_compile_options("SM_${NS}x${NT}" PRIVATE
             #-Wall
 			-O3
-			-fopenmp
+			#-fopenmp
 )
 
-find_package(OpenMP REQUIRED)
-target_link_libraries("SM_${NS}x${NT}" PUBLIC OpenMP::OpenMP_CXX)
+#find_package(OpenMP REQUIRED)
+#target_link_libraries("SM_${NS}x${NT}" PUBLIC OpenMP::OpenMP_CXX)
 
 
 #PROJECT_SOURCE_DIR: it indicates where src is located
