--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED True)
 #set(CMAKE_CXX_COMPILER "C:/msys64/ucrt64/bin/g++.exe")
 project(Schwinger_model VERSION 1.0)
 
-# Create a sources variable with a link to all cpp files to compile
+
 set(SOURCES
     src/statistics.cpp
     src/variables.cpp
@@ -16,22 +16,16 @@ set(SOURCES
     src/hmc.cpp
 )
 
-set(NS "20") 
-set(NT "20") 
+set(NS "16") 
+set(NT "16") 
+
 configure_file(${CMAKE_SOURCE_DIR}/include/config.h.in ${CMAKE_SOURCE_DIR}/include/config.h)
 
-
-
 # Add an executable with the above sources
-add_executable("SM_${NS}x${NT}" ${SOURCES} "include/hmc.h"
- "include/matrix_operations.h" 
- "include/conjugate_gradient.h" 
- "include/variables.h" 
- "include/gauge_conf.h" 
- "include/statistics.h" "include/operator_overloads.h")
+add_executable("SM_${NS}x${NT}" ${SOURCES})
 
-# Set the directories that should be included in the build command for this target
-# when running g++ these will be included as -I/directory/path/
+# Add the include directory to the compiler search path
+# This is where the header files are located
 target_include_directories("SM_${NS}x${NT}"
         PUBLIC 
         ${PROJECT_SOURCE_DIR}/include
@@ -40,6 +34,28 @@ target_compile_options("SM_${NS}x${NT}" PRIVATE
 			-O3
 			#-fopenmp
 )
+
+#-----------------mass-----------------#
+set(SOURCES_MASS
+    src/statistics.cpp
+    src/variables.cpp
+    src/mass.cpp   
+    src/gauge_conf.cpp
+    src/matrix_operations.cpp
+    src/conjugate_gradient.cpp
+)
+
+add_executable("mass_${NS}x${NT}" ${SOURCES_MASS})
+
+target_include_directories("mass_${NS}x${NT}"
+        PUBLIC 
+        ${PROJECT_SOURCE_DIR}/include
+)
+target_compile_options("mass_${NS}x${NT}" PRIVATE
+			-O3
+)
+#---------------------------------------#
+
 
 #find_package(OpenMP REQUIRED)
 #target_link_libraries("SM_${NS}x${NT}" PUBLIC OpenMP::OpenMP_CXX)
