--- a/AMG/include/config.h.in
+++ b/AMG/include/config.h.in
@@ -6,5 +6,7 @@
 #define BLOCK_T ${BLOCK_T}
 #define NTEST ${NTEST}
 #define NAGG ${NAGG}
+#define SAP_BLOCK_X ${SAP_BLOCK_X}
+#define SAP_BLOCK_T ${SAP_BLOCK_T}
 
 #endif
