--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,8 +14,8 @@ set(SOURCES
     src/hmc.cpp                 #Hybrid Monte Carlo
 )
 
-set(NS "64")   #Lattice dimension x
-set(NT "64")   #Lattice dimension t
+set(NS "32")   #Lattice dimension x
+set(NT "32")   #Lattice dimension t
 
 configure_file(${CMAKE_SOURCE_DIR}/include/config.h.in ${CMAKE_SOURCE_DIR}/include/config.h)
 
@@ -30,36 +30,11 @@ target_include_directories("SM_${NS}x${NT}"
 target_compile_options("SM_${NS}x${NT}" PRIVATE
 			-O3
             #-g #For profiling
-			#-fopenmp
+			-fopenmp
 )
 
-#find_package(OpenMP REQUIRED)
-#target_link_libraries("SM_${NS}x${NT}" PUBLIC OpenMP::OpenMP_CXX)
-
-#-----------------For measuring the pion correlator-----------------#
-set(SOURCES_MASS
-    src/statistics.cpp
-    src/variables.cpp
-    src/mass.cpp              #Pion correlator implementation
-    src/gauge_conf.cpp
-    src/dirac_operator.cpp
-    src/conjugate_gradient.cpp
-)
-
-add_executable("mass_${NS}x${NT}" ${SOURCES_MASS})
-
-target_include_directories("mass_${NS}x${NT}"
-        PUBLIC 
-        ${PROJECT_SOURCE_DIR}/include
-)
-target_compile_options("mass_${NS}x${NT}" PRIVATE
-			-O3
-            #-fopenmp
-)
-
-
-#find_package(OpenMP REQUIRED)
-#target_link_libraries("mass_${NS}x${NT}" PUBLIC OpenMP::OpenMP_CXX)
+find_package(OpenMP REQUIRED)
+target_link_libraries("SM_${NS}x${NT}" PUBLIC OpenMP::OpenMP_CXX)
 
 
 #---------------------------------------#
