--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,15 +7,15 @@ project(Schwinger_model VERSION 1.0)
 set(SOURCES
     src/statistics.cpp          #Functions to perform statistical analysis
     src/variables.cpp           #Relevant parameters for the lattice
-    src/maintest.cpp                #Main program
+    src/main.cpp                #Main program
     src/gauge_conf.cpp          #Gauge configuration (computes staples, plaquettes and gauge action)
     src/dirac_operator.cpp      #Implementation of D, D^+ and 2* Re ( left^+ d D / d omega(z) right )
     src/conjugate_gradient.cpp  #Conjugate gradient and Bi-cgstab
     src/hmc.cpp                 #Hybrid Monte Carlo
 )
 
-set(NS "16")   #Lattice dimension x
-set(NT "16")   #Lattice dimension t
+set(NS "64")   #Lattice dimension x
+set(NT "64")   #Lattice dimension t
 
 configure_file(${CMAKE_SOURCE_DIR}/include/config.h.in ${CMAKE_SOURCE_DIR}/include/config.h)
 
